update resume link

--- a/src/template.html
+++ b/src/template.html
@@ -84,7 +84,7 @@
                 I specialize in Front-End development and primarily use HTML, CSS, and JavaScript. Check out my work below, to see some of the projects I have worked recently.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/edit?doc=7fef71a7-7024-47bc-b99b-95c4da90e0d8">
                   View Resume
                 </a>
               </span>
