update about me

--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
                 I am a Developer with strong techinal skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
               </p>
               <p class="about-wrapper__info-text">
-                I specialize in Front-End development and primarily use HTML, CSS, and JavaScript. Check out my work below, to see some of the projects I have worked recently.
+                I specialize in Front-End development and primarily use HTML, CSS, and JavaScript. Check out my work below, to see some of the projects I have worked on recently.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/WNUP2081r_White_and_Pastel_Teal_Minimalist_Resume.pdf
