--- a/src/template.html
+++ b/src/template.html
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a Developer with strong techinal skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
+                I am a Developer with strong technical skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all of my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
               </p>
               <p class="about-wrapper__info-text">
                 I specialize in Front-End development and primarily use HTML, CSS, and JavaScript. Check out my work below, to see some of the projects I have worked on recently.
@@ -141,7 +141,7 @@
                 <h3 class="project-wrapper__text-title">Pixel Art</h3>
                 <div>
                   <p class="mb-4">
-                    You can use Pixel Art maker to create fun pictures by selecting pixels with your chouse of color. I designed this project using JavaScript.
+                    You can use Pixel Art maker to create fun pictures by selecting pixels with your choice of color. I designed this project using JavaScript.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/pixel-art/">
