--- a/src/template.html
+++ b/src/template.html
@@ -141,7 +141,7 @@
                 <h3 class="project-wrapper__text-title">RoboSquad</h3>
                 <div>
                   <p class="mb-4">
-                    Created an interactive and functional app project using React.
+                    Created an interactive and functional front end application project using, API's, React, and Redux.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/robosquad/">
