--- a/src/template.html
+++ b/src/template.html
@@ -84,8 +84,7 @@
                 I specialize in Front-End development and primarily use HTML, CSS, and JavaScript. Check out my work below, to see some of the projects I have worked on recently.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/of2XF1Bpy_Shezray_Resume_2020.pdf"
-">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/of2XF1Bpy_Shezray_Resume_2020.pdf">
                   View Resume
                 </a>
               </span>
