--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
                 I am a Developer with strong technical skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all of my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
               </p>
               <p class="about-wrapper__info-text">
-                I specialize in Front-End development and amd primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have worked on recently.
+                I specialize in Front-End development and am primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have worked on recently.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/of2XF1Bpy_Shezray_Resume_2020.pdf">
