--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[], [], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Shezray] | Developer" />
+    <meta name="description" content="[Shezray] | Software Developer" />
 
     <!-- Required librarys -->
     <link
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a Developer with strong technical skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all of my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
+                I am a developer with strong technical skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all of my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
               </p>
               <p class="about-wrapper__info-text">
                 I specialize in Front-End development and am primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have worked on recently.
