added new full stack project

--- a/src/template.html
+++ b/src/template.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title> Shezray Mirza | Developer</title>
+    <title> Shezray's Portfolio</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[], [], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Shezray] | Software Developer" />
+    <meta name="description" content="Shezray|Software Developer" />
 
     <!-- Required librarys -->
     <link
@@ -103,6 +103,36 @@
             Projects
           </h2>
 
+                    <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Face Scanner</h3>
+                <div>
+                  <p class="mb-4">
+                    An image recognition application created using JSX, React.js, and HTML/CSS. Also incorporates a server I created with Node.js and Express.js. I implemented a secure database using PostgreSQL and deployed the application using Heroku. A user can register on the application as well as sign-in and sign-out. When a user uploads an image the application will scan and detect a face using Clarifai API.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shez-face-scanner.herokuapp.com/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/facescanner-api">
+                  Source Code 
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://shezray.github.io/custom-background-generator/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/project5.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -110,7 +140,7 @@
                 <h3 class="project-wrapper__text-title">Custom Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    This project was designed to create a custom gradient background and color selection.
+                    An interactive application I created using Javacript, HTML, and CSS in which a user can create a custom gradient background and color selection.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/custom-background-generator/">
@@ -140,7 +170,7 @@
                 <h3 class="project-wrapper__text-title">RoboSquad</h3>
                 <div>
                   <p class="mb-4">
-                    Created an interactive and functional front end application project using, API's, React, and Redux.
+                    Created an interactive front-end application project using Javascript, React.js, Redux. The application uses an API.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/robosquad/">
@@ -170,7 +200,7 @@
                 <h3 class="project-wrapper__text-title">Pixel Art</h3>
                 <div>
                   <p class="mb-4">
-                    You can use Pixel Art maker to create fun pictures by selecting pixels with your choice of color. I designed this project using JavaScript.
+                    Users can use Pixel Art maker to create fun pictures by selecting pixels with your choice of color. I designed this project using JavaScript, HTML, and CSS.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/pixel-art/">
@@ -200,7 +230,7 @@
                 <h3 class="project-wrapper__text-title">Landing Web Page</h3>
                 <div>
                   <p class="mb-4">
-                    I created this landing webpage for a sample startup cosmetic company that focuses on Ayurvedic skincare. 
+                    I created this landing webpage using HTML, CSS, and Javascript for a prospective startup cosmetic company that focuses on Ayurvedic skincare. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/cosmetic-website/">
