--- a/src/template.html
+++ b/src/template.html
@@ -123,7 +123,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://shezray.github.io/custom-background-generator/" target="_blank">
+                <a href="https://shez-face-scanner.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/project5.jpg" />
                   </div>
