--- a/src/template.html
+++ b/src/template.html
@@ -83,11 +83,11 @@
               <p class="about-wrapper__info-text">
                 I specialize in Front-End development and am primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have worked on recently.
               </p>
-              <span class="d-flex mt-3">
+<!--               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/0QN.rRk~t_Developer_Shezray.pdf">
                   View Resume
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
