--- a/src/template.html
+++ b/src/template.html
@@ -103,7 +103,7 @@
             Projects
           </h2>
 
-                    <!-- Each .row is a project -->
+                    <!-- 
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -131,7 +131,7 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
