--- a/src/template.html
+++ b/src/template.html
@@ -1,30 +1,16 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> cobimr@protonmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Put here your site title -->
     <title> Shezray's Portfolio</title>
-    <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[], [], skill" />
-    <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="Shezray|Software Developer" />
+    <meta name="description" content="Shezray | Software Developer" />
 
-    <!-- Required librarys -->
+    <!-- Required libraries -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -34,35 +20,37 @@
       ScrollReveal({ reset: false });
     </script>
 
-    <!-- Remove this script once you setup your custom portfolio -->
+    <!-- GitHub button script -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+    <!-- Include the jQuery and Tilt.js scripts here -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tilt.js@1.2.1"></script>
+
   </head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
-    <!-- **** Hero Section **** -->
+    <!-- Hero Section -->
     <div id="hero" class="jumbotron">
       <div class="container">
-        <h1 class="hero-title" class="load-hidden">
+        <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Shezray Mirza</span>
           <br />
           I'm a Front-End Developer.
         </h1>
-        <p class="hero-cta" class="load-hidden">
+        <p class="hero-cta load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Portfolio</a>
         </p>
       </div>
     </div>
     <!-- /END Hero Section -->
 
-    <!-- **** About Section **** -->
+    <!-- About Section -->
     <section id="about">
       <div class="container">
-        <h2 class="section-title">
-          About me
-        </h2>
+        <h2 class="section-title">About me</h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image">
@@ -70,7 +58,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -83,11 +71,6 @@
               <p class="about-wrapper__info-text">
                 I specialize in Front-End development and am primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have worked on recently.
               </p>
-<!--               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://pdfhost.io/v/0QN.rRk~t_Developer_Shezray.pdf">
-                  View Resume
-                </a>
-              </span> -->
             </div>
           </div>
         </div>
@@ -95,52 +78,20 @@
     </section>
     <!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
+    <!-- Projects Section -->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">
-            Projects
-          </h2>
+          <h2 class="section-title dark-blue-text">Projects</h2>
 
-                    <!-- 
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Face Scanner</h3>
-                <div>
-                  <p class="mb-4">
-                    An image recognition application created using JSX, React.js, and HTML/CSS. Also incorporates a server I created with Node.js and Express.js. I implemented a secure database using PostgreSQL and deployed the application using Heroku. A user can register on the application as well as sign-in and sign-out. When a user uploads an image the application will scan and detect a face using Clarifai API.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shez-face-scanner.herokuapp.com/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/facescanner-api">
-                  Source Code 
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://shez-face-scanner.herokuapp.com/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project5.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          /END Project -->
-
-          <!-- Each .row is a project -->
+          <!-- Project Example: Custom Background Generator -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Custom Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    An interactive application I created using Javacript, HTML, and CSS in which a user can create a custom gradient background and color selection.
+                    An interactive application I created using Javascript, HTML, and CSS in which a user can create a custom gradient background and color selection.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/custom-background-generator/">
@@ -154,23 +105,51 @@
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
                 <a href="https://shezray.github.io/custom-background-generator/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project1.jpg" />
+                  <div data-tilt class="thumbnail rounded tilt-element">
+                    <img class="img-fluid" src="assets/project1.jpg" alt="Custom Background Generator Project" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
 
-          <!-- Each .row is a project -->
+          <!-- Project Example: Face Scanner -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Face Scanner</h3>
+                <div>
+                  <p class="mb-4">
+                    A face detection web app built using React, JSX, Node.js, Express.js, PostgreSQL, and the Clarifai API.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/face-scanner/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/face-scanner">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://shezray.github.io/face-scanner/" target="_blank">
+                  <div data-tilt class="thumbnail rounded tilt-element">
+                    <img class="img-fluid" src="assets/project2.jpg" alt="Face Scanner Project" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project Example: RoboSquad -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">RoboSquad</h3>
                 <div>
                   <p class="mb-4">
-                    Created an interactive front-end application project using Javascript, React.js, Redux. The application uses an API.
+                    A React.js application that integrates with an API to display robot data and provides user interactions through Redux.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/robosquad/">
@@ -184,101 +163,22 @@
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
                 <a href="https://shezray.github.io/robosquad/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project4.jpg" />
+                  <div data-tilt class="thumbnail rounded tilt-element">
+                    <img class="img-fluid" src="assets/project3.jpg" alt="RoboSquad Project" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
 
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Pixel Art</h3>
-                <div>
-                  <p class="mb-4">
-                    Users can use Pixel Art maker to create fun pictures by selecting pixels with your choice of color. I designed this project using JavaScript, HTML, and CSS.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/pixel-art/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/pixel-art">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://shezray.github.io/pixel-art/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project2.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+          <!-- Add additional projects as needed -->
 
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Landing Web Page</h3>
-                <div>
-                  <p class="mb-4">
-                    I created this landing webpage using HTML, CSS, and Javascript for a prospective startup cosmetic company that focuses on Ayurvedic skincare. 
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://shezray.github.io/cosmetic-website/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/cosmetic-website">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://shezray.github.io/cosmetic-website/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project3.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
         </div>
       </div>
     </section>
     <!-- /END Projects Section -->
 
-    <!-- **** Contact Section **** -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="section-title">
-          Contact
-        </h2>
-        <div class="contact-wrapper">
-          <p class="contact-wrapper__text">
-            For business related inquiries:
-          </p>
-          <a
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:sincerelyshez@gmail.com"
-            >EMAIL</a
-          >
-        </div>
-      </div>
-    </section>
-    <!-- /END Contact Section -->
-
-    <!-- **** Footer Section **** -->
+    <!-- Footer Section -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a href="#top" class="back-to-top">
@@ -288,9 +188,6 @@
           <a href="https://twitter.com/ShezrayOfficial" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-        <!--   <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a> -->
           <a href="https://linkedin.com/in/shezray" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
@@ -301,35 +198,25 @@
 
         <hr />
 
-        <!-- If you give me some credit, will be huge for me :) -->
-        <p class="footer__text"> Designed by Shezray Mirza
-          © 2020 <!-- - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez --></a>
-          </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-       <!--  <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p> -->
+        <p class="footer__text"> Designed by Shezray Mirza © 2020</p>
       </div>
     </footer>
     <!-- /END Footer Section -->
+
+    <!-- Add the script to initialize Tilt.js -->
+    <script>
+      $(document).ready(function () {
+        // Apply the tilt effect to all elements with class "tilt-element"
+        $('.tilt-element').each(function () {
+          $(this).tilt({
+            maxTilt: 25,          // Maximum tilt value
+            perspective: 1000,    // Depth of the 3D effect
+            speed: 400,           // Speed of the tilt effect
+            easing: "cubic-bezier(.03,.98,.52,.99)"  // Easing for smooth transition
+          });
+        });
+      });
+    </script>
+
   </body>
 </html>
