added ecomm project to portfolio and updated about me section

--- a/src/template.html
+++ b/src/template.html
@@ -36,9 +36,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Shezray Mirza</span>
+          Pixel-perfect design meets <span class="text-color-main">performance-driven code</span>
           <br />
-          I'm a Front-End Developer.
+          
         </h1>
         <p class="hero-cta load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Portfolio</a>
@@ -66,11 +66,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a developer with strong technical skills and an extremely artistic background. I have always had a strong passion for design and creation since childhood. I am extremely ambitious and channel all of my creative energy into my work. I strive to build immersive, user-centric, and aesthetically pleasing web applications.
-              </p>
-              <p class="about-wrapper__info-text">
-                I specialize in Front-End development and UI/UX Design and am primarily well-versed in Javascript, React+Redux, HTML, and CSS. Check out my work below, to see some of the projects I have built.
-              </p>
+                I’m Shezray Mirza — a front-end developer and UI/UX designer passionate about crafting clean, high-performing, and intuitive digital experiences. I specialize in building responsive, accessible web interfaces using React.js, Tailwind CSS, and modern JavaScript frameworks. Whether it’s translating Figma prototypes into fluid user flows or designing scalable component libraries, I blend thoughtful design with clean, maintainable code to create user-first interfaces that look sharp and feel seamless.
+
+
+                <p class="about-wrapper__info-text">
+                  My toolkit includes React, JavaScript (ES6+), TypeScript, Next.js, Tailwind, Framer Motion, and Git — with a strong focus on component-based architecture, performance optimization, and accessibility. On the design side, I work with tools like Figma, Adobe XD, and Webflow to craft intuitive interfaces and wireframes, backed by user research and UX best practices. I'm experienced with REST APIs, responsive design, version control workflows, and testing with tools like Jest and React Testing Library. From ideation to deployment, I bring cross-functional value by bridging the gap between user needs and technical execution.
+
+
+                </p>
             </div>
           </div>
         </div>
@@ -83,6 +86,35 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+
+                    <!-- Project Example: Custom Background Generator -->
+                    <div class="row">
+                      <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                          <h3 class="project-wrapper__text-title">CRWN Streetwear Ecommerce Site</h3>
+                          <div>
+                            <p class="mb-4">
+                              An e-commerce web application built with React and Firebase that simulates a modern clothing store experience. Users can browse a curated selection of streetwear items, add products to their cart, sign up or log in with Firebase authentication, and simulate the checkout process. The app was built as a full-featured Single Page Application (SPA) using React Router for seamless navigation and Redux for state management. Key features include: User authentication via Firebase, Persistent cart functionality, Dynamic product filtering, and Responsive design optimized for desktop and mobile. This project showcases practical frontend development skills including React architecture, context API integration, and deployment on Netlify with custom routing support. Ideal for demonstrating real-world SPA structure and client-side interactivity.
+
+                            </div>
+                          <a target="_blank" class="cta-btn cta-btn--hero" href="https://crwnstreetwear.netlify.app/">
+                            See Live
+                          </a>
+                          <a target="_blank" class="cta-btn text-color-main" href="https://github.com/shezray/ecom/tree/main">
+                            Source Code
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                          <a href="https://crwnstreetwear.netlify.app/" target="_blank">
+                            <div data-tilt class="thumbnail rounded tilt-element">
+                              <img class="img-fluid" src="assets/project6.jpg" alt="Custom Background Generator Project" />
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
 
           <!-- Project Example: Custom Background Generator -->
           <div class="row">
